Behavioral messages draft 2

--- a/client/src/app/notification.html
+++ b/client/src/app/notification.html
@@ -1,2 +1,4 @@
-<p>I'm that modal that you like...</p>
-<p>{{message}}</p>
+<ion-content>
+    <p>I'm that modal that you like...</p>
+    <p>{{message}}</p>
+</ion-content>
