Add error message to enrollment form

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -36,7 +36,7 @@ $app-direction: ltr;
 $colors: (
   primary:    #488aff,
   secondary:  #32db64,
-  danger:     #f53d3d,
+  danger:     #F57B55,
   light:      #f4f4f4,
   dark:       #222
 );
