Add styles for alternative-background

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -35,8 +35,8 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #F57B55,
+  secondary:  #F57B55,
+  danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
