--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -7,3 +7,37 @@
 .error {
     color: map-get($colors, danger);
 }
+
+button {
+    padding: 0.75em;
+    font-size: 1.2em;
+
+    display: block;
+    width: 100%;
+
+    background-color: map-get($colors, primary);
+    color: #fff   
+}
+
+.alternate-background {
+    background: linear-gradient(to top, #1a508d 7%,#40a2e0 93%);
+    color: #FFF;
+
+    text-align: center;
+
+    h1 {
+        font-weight: normal;
+        text-transform: uppercase;
+    }
+
+    button {
+        border: 1px #fff solid;
+        text-align: center;
+        color: #fff;
+        background-color: transparent;
+        font-size: 1.2em;
+        padding: 0.75em;
+        display: block;
+        width: 100%;
+    }
+}
