--- a/client/src/app/notification.html
+++ b/client/src/app/notification.html
@@ -1,4 +1,2 @@
-<ion-content>
-    <p>I'm that modal that you like...</p>
-    <p>{{message}}</p>
-</ion-content>
+<p class="large">{{message}}</p>
+<button (click)="dismiss()">Ok</button>
