Added plan modal and stubbed plan adding sequence

--- a/client/src/pages/activity-plan/day-plan.component.html
+++ b/client/src/pages/activity-plan/day-plan.component.html
@@ -1,2 +1,5 @@
 <h3>{{dateFormatted}}</h3>
-<button>Add an activity</button>
+<ion-list>
+    <ion-item *ngFor="let plan of plans">...plan...</ion-item>
+</ion-list>
+<button ion-button clear (click)="addPlan()">Add activity</button>
