Organized forms css

--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -71,8 +71,9 @@ $colors: (
 // default are overridden.
 
 @import "ionic.theme.default";
+@import 'theme/base.scss';
+@import 'theme/layout.scss';
 @import 'theme/forms.scss';
-
 
 // Ionicons
 // --------------------------------------------------
