--- a/client/src/theme/forms.scss
+++ b/client/src/theme/forms.scss
@@ -2,6 +2,25 @@ fieldset {
     border: 0px;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+
+    & > *,
+    > .item-block {
+        flex: 0 0 auto;
+        margin: 0.5em 0em;
+    }
+    
+    > button:last-child {
+        flex-grow: 1;
+    }
+
+    > .item-block {
+        padding: 0px;
+    }
+}
+
 fieldset legend {
     font-weight: bold;
 }
@@ -10,15 +29,19 @@ form .ion-item {
     margin: 0px;
 }
 
-.datetime.ng-invalid:after,
-.input.ng-invalid:after {
-    content: ' ';
-    mask: url('/assets/error-icon.svg') no-repeat 0px 0px;
-    mask-size: contain;
-    width: 15px;
-    height: 15px;
-    background-color: map-get($colors, danger);
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
+form {
+    .item.ng-invalid.ng-touched {
+        padding-right: 30px;
+        &:after{
+            content: ' ';
+            mask: url('/assets/error-icon.svg') no-repeat 0px 0px;
+            mask-size: contain;
+            width: 15px;
+            height: 15px;
+            background-color: map-get($colors, danger);
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+        }
+    }
 }
