Add plan model to maintain timezones

--- a/client/src/pages/activity-plan/day-plan.component.html
+++ b/client/src/pages/activity-plan/day-plan.component.html
@@ -1,6 +1,6 @@
 <h3>{{dateFormatted}}</h3>
 <ion-list>
     <ion-item *ngFor="let plan of plans">
-        <activity-plan [plan]="plan"></activity-plan>
+        <activity-plan [activity]="plan"></activity-plan>
     </ion-item>
 </ion-list>
