--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -1,4 +1,4 @@
-<div class="activity-plan" [ngClass]="activity">
-    <p>{{activity}}, {{duration}}, {{intensity}}</p>
-    <span>{{time}}</span>
+<div class="activity-plan" [ngClass]="activity" (click)="openPlan()">
+    <p>{{activity.type}}, {{activity.duration}}</p>
+    <span>{{activity.start | date:'shortTime'}}</span>
 </div>
