--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -1,4 +1,6 @@
 <div class="activity-plan" [ngClass]="activity" (click)="openPlan()">
     <p>{{activity.type}}, {{activity.duration}}</p>
     <span>{{activity.start | date:'shortTime'}}</span>
+    <p *ngIf="activity.isComplete()">Complete</p>
+    <p *ngIf="!activity.isComplete()">Planned</p>
 </div>
