--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -75,6 +75,8 @@ $colors: (
 @import 'theme/layout.scss';
 @import 'theme/forms.scss';
 
+@import 'theme/start-screen.scss';
+
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
