--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,4 +1,10 @@
 
+@import 'theme/base.scss';
+@import 'theme/layout.scss';
+@import 'theme/forms.scss';
+@import 'theme/logo.scss';
+@import 'theme/start-screen.scss';
+
 #map {
     width: 100%;
     height: 200px;
