--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -1,4 +1,5 @@
 .start-screen,
+.start-screen.ion-page,
 .alternate-background,
 .heartsteps-message-modal {
     background: linear-gradient(to top, #1a508d 7%,#40a2e0 93%);
@@ -9,7 +10,6 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
 
     .large {
         font-size: 1.75em;
@@ -29,5 +29,9 @@
         padding: 0.75em;
         display: block;
         width: 100%;
+    }
+
+    .controls {
+        flex-grow: 1;
     }
 }
