--- a/fitbit/resources/styles.css
+++ b/fitbit/resources/styles.css
@@ -1,12 +1,20 @@
-.defaultText {
-  font-size: 32;
+.background {
+  viewport-fill: fb-blue;
+}
+
+text {
+  font-size: 24;
   font-family: System-Regular;
   font-weight: regular;
   text-length: 32;
+  color: white;
+  text-anchor: middle;
 }
 
-#background {
-  width: 100%;
-  height: 100%;
-  fill: white;
+text.title {
+  font-size: 32;
+}
+
+text.bold {
+  font-family: System-Bold;
 }
