--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -22,7 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-
+$space-size: 20px;
 
 
 // Named Color Variables
