Phone-based attempts at waking watch and sending notifications

--- a/fitbit/resources/styles.css
+++ b/fitbit/resources/styles.css
@@ -7,7 +7,7 @@ text {
   font-family: System-Regular;
   font-weight: regular;
   text-length: 32;
-  color: white;
+  fill: white;
   text-anchor: middle;
 }
 
