--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -38,7 +38,7 @@ $colors: (
   secondary:  #F57B55,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
 );
 
 
