--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -1,4 +1,15 @@
 
+.app-root {
+    display: flex;
+    flex-direction: column;
+    & > * {
+        flex-grow: 1;
+    }
+    > router-outlet {
+        display: none;
+    }
+}
+
 .content {
     display: flex;
     flex-direction: column;
