--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     & > * {
         flex-grow: 1;
+        padding: 10px;
     }
     > router-outlet {
         display: none;
