--- a/client/src/pages/onboard/onboard.scss
+++ b/client/src/pages/onboard/onboard.scss
@@ -11,7 +11,7 @@ pages-onboarding {
             height: 1em;
             width: 1em;
             border-radius: 50%;
-            background-color: $color-light;
+            background-color: $color-gray-light;
             overflow: hidden;
             text-indent: -3000em;
         }
