--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -12,6 +12,24 @@ h3 {
     text-align: center;
 }
 
+header {
+    background-color: $color-gray-light;
+    border-bottom: $color-gray-dark 1px solid;
+    height: $block-size;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: $space-size $block-size+$space-size;
+    a.back, button.back {
+        display: block;
+        position: absolute;
+        left: 0px;
+        width: $block-size;
+        padding: $space-size/2;
+    }
+}
+
 .heartsteps-primary-button {
     display: block;
     color: map-get($colors, primary);
