--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -49,6 +49,7 @@ $colors: (
   dark:       $color-gray-dark,
 );
 
+$background-primary: #ffffff;
 
 // App iOS Variables
 // --------------------------------------------------
