--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -2,4 +2,19 @@ page-home {
     header > .settings {
         @extend .back;
     }
+
+    > .page > nav {
+        .dashboard:before {
+            mask-image: url('/assets/dashboard.svg');
+        }
+        .planning:before {
+            mask-image: url('/assets/planning.svg');
+        }
+        .stats:before {
+            mask-image: url('/assets/stats.svg');
+        }
+        .library:before {
+            mask-image: url('/assets/library.svg');
+        }
+    }
 }
