Got daily summary update to work

--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -12,6 +12,11 @@ h3 {
     text-align: center;
 }
 
+button {
+    background: transparent;
+    color: $link-color;
+}
+
 .page {
     > header {
         background-color: $color-gray-light;
