--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -51,6 +51,8 @@ $colors: (
 
 $background-primary: #ffffff;
 
+$link-color: $color-primary;
+
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
