--- a/client/src/pages/onboard/onboard.scss
+++ b/client/src/pages/onboard/onboard.scss
@@ -18,5 +18,15 @@ pages-onboarding {
         & > .active {
             background-color: $color-primary;
         }
+        height: 1em;
+    }
+
+    .page > header {
+        background-color: transparent;
+        border-bottom: 0px;
+        flex-direction: column-reverse;
+        > .pagination-bullets {
+            order: -1;
+        }
     }
 }
