--- a/client/src/theme/forms.scss
+++ b/client/src/theme/forms.scss
@@ -1,10 +1,7 @@
-fieldset {
-    border: 0px;
-}
-
 form {
     display: flex;
     flex-direction: column;
+    font-size: 1.6rem;
 
     & > *,
     > .item-block {
@@ -25,6 +22,10 @@ form {
     }
 }
 
+form > fieldset {
+    @extend form;
+}
+
 form.map {
 
     #map {
@@ -38,8 +39,15 @@ form.map {
     }
 }
 
+fieldset {
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
 fieldset legend {
     font-weight: bold;
+    padding-top: $space-size;
 }
 
 form .ion-item {
