Messing with CSS

--- a/client/src/heartsteps/activity/activity-type.component.html
+++ b/client/src/heartsteps/activity/activity-type.component.html
@@ -1,4 +1,4 @@
-<button *ngIf="activityType" (click)="reset()" class="activity-type activity-type-{{activityType.name}}">{{activityType.title}}</button>
+<button *ngIf="activityType" (click)="reset()" class="activity-type activity-type-{{activityType.name}} remove">{{activityType.title}}</button>
 <ul *ngIf="!activityType">
     <li *ngFor="let activityType of activityTypeList">
         <button (click)="select(activityType)" class="activity-type activity-type-{{activityType.name}}">
