--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -240,3 +240,23 @@ ul.horizontal li {
         @extend .label;
     }
 }
+
+.pagination-bullets {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    & > * {
+        display: block;
+        margin: $space-size/4;
+        height: 1em;
+        width: 1em;
+        border-radius: 50%;
+        background-color: $color-gray-light;
+        overflow: hidden;
+        text-indent: -3000em;
+    }
+    & > .active {
+        background-color: $color-primary;
+    }
+    height: 1em;
+}
