Refactor survey control

--- a/client/src/pages/weekly-survey/survey-review.component.html
+++ b/client/src/pages/weekly-survey/survey-review.component.html
@@ -1,3 +1,3 @@
 <p>Next, take a moment to plan activities for the upcoming week to reach your weekly goal.</p>
-<span>95 min</span>
+<span>{{goal}} min</span>
 <button (click)="next()">Continue to Planning</button>
