--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -52,6 +52,7 @@ $colors: (
 );
 
 $background-primary: $color-white;
+$background-alternate: $color-gray-light;
 $text-color: $color-gray-dark;
 $link-color: $color-primary;
 
