--- a/client/src/pages/dashboard/dashboard.scss
+++ b/client/src/pages/dashboard/dashboard.scss
@@ -1,3 +1,9 @@
 page-dashboard {
-
+    .banners ul li a {
+        display: block;
+        margin: 0.5em 0em;
+        background-color: $color-primary;
+        color: $color-white;
+        padding: 1em;
+    }
 }
