Add default ranges to survey

--- a/client/src/pages/weekly-survey/survey.component.html
+++ b/client/src/pages/weekly-survey/survey.component.html
@@ -1,13 +1,13 @@
 <form>
     <div>
-        <label>Example question.</label>
-        <input type="input" />
+        <label>How much are you enjoying the physical activities you currently do?</label>
+        <heartsteps-range ></heartsteps-range>
     </div>
     <div>
-    <label>Example question.</label>
-        <input type="input" />
+        <label>How well are these activities fitting into your daily life right now?</label>
+        <heartsteps-range></heartsteps-range>
     </div>
     <div class="controls">
-            <button class="primary" (click)="next()">Save</button>
+        <button (click)="next()">Save</button>
     </div>
 </form>
