Add weekly plan page to weekly-survey

--- a/client/src/heartsteps/weekly-survey/weekly-goal.component.html
+++ b/client/src/heartsteps/weekly-survey/weekly-goal.component.html
@@ -16,6 +16,6 @@
         <heartsteps-range [(ngModel)]="confidence" name="confidence"></heartsteps-range>
     </div>
     <div class="controls">
-        <button (click)="save()">Set Goal</button>
+        <button (click)="save()">{{cta}}</button>
     </div>
 </form>
