--- a/client/src/pages/weekly-survey/goal.component.html
+++ b/client/src/pages/weekly-survey/goal.component.html
@@ -1,2 +1,1 @@
-<heartsteps-weekly-goal [week]="nextWeek" (saved)="nextPage()"></heartsteps-weekly-goal>
-<button (click)="nextPage()">Skip</button>
+<heartsteps-weekly-goal [week]="nextWeek" call-to-action="Next" (saved)="nextPage()"></heartsteps-weekly-goal>
